--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -68,6 +68,8 @@
     <ClCompile Include="src\Common\Tools\UI\HierarchyPanel.cpp" />
     <ClCompile Include="src\Common\Tools\UI\InspectorPanel.cpp" />
     <ClCompile Include="src\Common\Tools\Utils.cpp" />
+    <ClCompile Include="src\Core\Application.cpp" />
+    <ClCompile Include="src\Core\LogicCore.cpp" />
     <ClCompile Include="src\Core\RenderCore.cpp" />
     <ClCompile Include="src\GL\AssimpConvert.cpp" />
     <ClCompile Include="src\GL\GLComputeProgram.cpp" />
@@ -141,6 +143,8 @@
     <ClInclude Include="src\Common\Tools\UI\HierarchyPanel.h" />
     <ClInclude Include="src\Common\Tools\UI\InspectorPanel.h" />
     <ClInclude Include="src\Common\Tools\Utils.h" />
+    <ClInclude Include="src\Core\Application.h" />
+    <ClInclude Include="src\Core\LogicCore.h" />
     <ClInclude Include="src\Core\RenderCore.h" />
     <ClInclude Include="src\GL\Assimp.h" />
     <ClInclude Include="src\GL\AssimpConvert.h" />
