--- a/ShaderBrowser/ShaderBrowser.vcxproj.filters
+++ b/ShaderBrowser/ShaderBrowser.vcxproj.filters
@@ -288,6 +288,12 @@
     <ClCompile Include="src\Core\RenderCore.cpp">
       <Filter>src\Core</Filter>
     </ClCompile>
+    <ClCompile Include="src\Core\LogicCore.cpp">
+      <Filter>src\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Core\Application.cpp">
+      <Filter>src\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\GL\GLProgram.h">
@@ -492,6 +498,12 @@
       <Filter>src\Common\Tools\Thread</Filter>
     </ClInclude>
     <ClInclude Include="src\Core\RenderCore.h">
+      <Filter>src\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Core\Application.h">
+      <Filter>src\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Core\LogicCore.h">
       <Filter>src\Core</Filter>
     </ClInclude>
   </ItemGroup>
