--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -77,6 +77,7 @@
     <ClCompile Include="src\GL\GLFeedback.cpp" />
     <ClCompile Include="src\GL\GLProgram.cpp" />
     <ClCompile Include="src\GL\GLStateCache.cpp" />
+    <ClCompile Include="src\GL\GPUResource\BaseGPUResource.cpp" />
     <ClCompile Include="src\GL\Image.cpp" />
     <ClCompile Include="src\GL\Model.cpp" />
     <ClCompile Include="src\GL\Skeleton.cpp" />
@@ -127,6 +128,7 @@
     <ClInclude Include="src\Common\System\BaseSystem.h" />
     <ClInclude Include="src\Common\System\Cache\BaseAsyncLoader.h" />
     <ClInclude Include="src\Common\System\Cache\BaseCache.h" />
+    <ClInclude Include="src\Common\System\Cache\BaseLoader.h" />
     <ClInclude Include="src\Common\System\Cache\GLProgramCache.h" />
     <ClInclude Include="src\Common\System\Cache\MaterialCache.h" />
     <ClInclude Include="src\Common\System\Cache\ModelCache.h" />
@@ -153,6 +155,7 @@
     <ClInclude Include="src\GL\GLFeedback.h" />
     <ClInclude Include="src\GL\GLProgram.h" />
     <ClInclude Include="src\GL\GLStateCache.h" />
+    <ClInclude Include="src\GL\GPUResource\BaseGPUResource.h" />
     <ClInclude Include="src\GL\Image.h" />
     <ClInclude Include="src\GL\Model.h" />
     <ClInclude Include="src\GL\Rescale.h" />
