--- a/ShaderBrowser/ShaderBrowser.vcxproj.filters
+++ b/ShaderBrowser/ShaderBrowser.vcxproj.filters
@@ -330,6 +330,12 @@
     <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateGLProgramCommand.cpp">
       <Filter>src\GL\GPUOperateCommand</Filter>
     </ClCompile>
+    <ClCompile Include="src\GL\GPUResource\Texture\TextureBuffer.cpp">
+      <Filter>src\GL\GPUResource\Texture</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateTextureBufferCommand.cpp">
+      <Filter>src\GL\GPUOperateCommand</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\GL\GLDefine.h">
@@ -561,6 +567,12 @@
       <Filter>src\GL\GPUResource\Model</Filter>
     </ClInclude>
     <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateGLProgramCommand.h">
+      <Filter>src\GL\GPUOperateCommand</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GL\GPUResource\Texture\TextureBuffer.h">
+      <Filter>src\GL\GPUResource\Texture</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateTextureBufferCommand.h">
       <Filter>src\GL\GPUOperateCommand</Filter>
     </ClInclude>
   </ItemGroup>
