--- a/ShaderBrowser/ShaderBrowser.vcxproj
+++ b/ShaderBrowser/ShaderBrowser.vcxproj
@@ -77,6 +77,7 @@
     <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateCommandPool.cpp" />
     <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateGLProgramCommand.cpp" />
     <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateTexture2DCommand.cpp" />
+    <ClCompile Include="src\GL\GPUOperateCommand\GPUOperateTextureBufferCommand.cpp" />
     <ClCompile Include="src\GL\GPUResource\BaseGPUResource.cpp" />
     <ClCompile Include="src\GL\GPUResource\Model\Mesh.cpp" />
     <ClCompile Include="src\GL\GPUResource\Model\Model.cpp" />
@@ -87,6 +88,7 @@
     <ClCompile Include="src\GL\GPUResource\Shader\Pass.cpp" />
     <ClCompile Include="src\GL\GPUResource\Texture\Image.cpp" />
     <ClCompile Include="src\GL\GPUResource\Texture\Texture2D.cpp" />
+    <ClCompile Include="src\GL\GPUResource\Texture\TextureBuffer.cpp" />
     <ClCompile Include="src\GL\System\GPUOperateSystem.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Plugins\glad\src\glad.c" />
@@ -160,6 +162,7 @@
     <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateCommandPool.h" />
     <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateGLProgramCommand.h" />
     <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateTexture2DCommand.h" />
+    <ClInclude Include="src\GL\GPUOperateCommand\GPUOperateTextureBufferCommand.h" />
     <ClInclude Include="src\GL\GPUResource\BaseGPUResource.h" />
     <ClInclude Include="src\GL\GPUResource\Model\Mesh.h" />
     <ClInclude Include="src\GL\GPUResource\Model\Model.h" />
@@ -170,6 +173,7 @@
     <ClInclude Include="src\GL\GPUResource\Shader\Pass.h" />
     <ClInclude Include="src\GL\GPUResource\Texture\Image.h" />
     <ClInclude Include="src\GL\GPUResource\Texture\Texture2D.h" />
+    <ClInclude Include="src\GL\GPUResource\Texture\TextureBuffer.h" />
     <ClInclude Include="src\GL\Rescale.h" />
     <ClInclude Include="src\GL\System\GPUOperateSystem.h" />
   </ItemGroup>
